kernel/tests/typing/invalid/not_a_function_1.ck
data T : Type where

def a : T := T T